# jambon

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/matchers/: rust.json
.github/workflows/: audit.yml  ci.yml  docs.yml  labeler.yml  release-plz.yml
crates/bot-bin/: CHANGELOG.md  Cargo.toml
crates/bot-bin/src/: main.rs
crates/bot-commands/: CHANGELOG.md  Cargo.toml
crates/bot-commands/src/: acl.rs  admin.rs  audit.rs  autocomplete.rs  backup.rs  cluster.rs  colors.rs  container.rs  firewall.rs  interactions.rs  lib.rs  menu.rs  mod.rs  node.rs  node_utils.rs  permissions.rs  pool.rs  schedule.rs  scheduler.rs  storage.rs  vm.rs
crates/bot-core/: CHANGELOG.md  Cargo.toml
crates/bot-core/src/: config.rs  error.rs  events.rs  framework.rs  lib.rs
crates/bot-i18n/: CHANGELOG.md  Cargo.toml
crates/bot-i18n/src/: lib.rs
crates/proxmox-api/: CHANGELOG.md  Cargo.toml
crates/proxmox-api/src/: client.rs  error.rs  lib.rs  models.rs  resources.rs
crates/proxmox-api/tests/: api_response_fixtures.rs
deploy/helm/jambon/: Chart.yaml  values.yaml
deploy/helm/jambon/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  contributing.md  getting-started.md  introduction.md
docs/src/admin/: guide.md
docs/src/developer/: contributing.md
