[workspace]
resolver = "2"
members = [
    "crates/bot-core",
    "crates/bot-commands",
    "crates/proxmox-api",
    "crates/bot-bin",
]
default-members = ["crates/bot-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cleeryy/jambon"
rust-version = "1.81"

[workspace.dependencies]
serenity = { version = "0.12", default-features = false, features = ["rustls_backend"] }
poise = { version = "0.6", features = ["cache", "chrono", "handle_panics"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
