[workspace]
resolver = "2"
members = [
    "crates/bot-core",
    "crates/bot-commands",
    "crates/proxmox-api",
    "crates/bot-bin",
    "crates/bot-i18n",
]
default-members = ["crates/bot-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cleeryy/jambon"
rust-version = "1.81"

[workspace.dependencies]
serenity = { version = "0.12", default-features = false, features = ["rustls_backend"] }
poise = { version = "0.6", features = ["cache", "chrono", "handle_panics"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.17.0"
jambon-proxmox-api = { version = "0.1.0", path = "crates/proxmox-api" }
jambon-bot-commands = { version = "0.1.0", path = "crates/bot-commands" }
jambon-bot-core = { version = "0.1.0", path = "crates/bot-core" }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[patch.crates-io]
rustls-webpki = { git = "https://github.com/rustls/webpki", tag = "v/0.103.13" }
