[package]
name = "jambon-bot-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Discord slash command handlers for Jambon"

[dependencies]
poise.workspace = true
tokio.workspace = true
serenity.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
cron.workspace = true
jambon-proxmox-api.workspace = true

[lints]
workspace = true
