[package]
name = "jambon-proxmox-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proxmox VE REST API client for the Jambon Discord bot"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true

[lints]
workspace = true
